--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/spider-web.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Six Degrees of Wikipedia</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4TNY379LTX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-4TNY379LTX', {
+        send_page_view: true
+      });
+    </script>
   </head>
   <body>
     <div id="root"></div>
